--- a/keygen/pom.xml
+++ b/keygen/pom.xml
@@ -3,21 +3,20 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>l9g.keycloak</groupId>
   <artifactId>l9g-encrypted-user-password-keygen</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-kc22-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
     <exec.mainClass>l9g.keycloak.keygen.App</exec.mainClass>
+    <maven.compiler.release>17</maven.compiler.release>
   </properties>
     
   <dependencies>
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.68</version>
+      <version>1.70</version>
     </dependency>
   </dependencies>
     
