--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@ ttp://maven.apache.org/maven-v4_0_0.xsd">
   <groupId>l9g.keycloak</groupId>
   <artifactId>l9g-encrypted-user-password</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-kc22-SNAPSHOT</version>
   <name>${project.artifactId}</name>
 
   <modules>
