--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -4,14 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>l9g.keycloak</groupId>
   <artifactId>l9g-encrypted-user-password-provider</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-kc22-SNAPSHOT</version>
   <packaging>jar</packaging>
     
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <keycloak.version>21.1.0</keycloak.version>
+    <keycloak.version>22.0.1</keycloak.version>
+    <maven.compiler.release>17</maven.compiler.release>
   </properties>
     
   <dependencyManagement>
@@ -30,31 +29,26 @@
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
-      <version>1.68</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-core</artifactId>
-      <version>${keycloak.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-server-spi</artifactId>
-      <version>${keycloak.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-server-spi-private</artifactId>
-      <version>${keycloak.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.keycloak</groupId>
       <artifactId>keycloak-services</artifactId>
-      <version>${keycloak.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -66,7 +60,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.3.0</version>
         <configuration>
           <archive>
             <manifestEntries>
